# VTK_QML_MRI

./: .gitignore  CMakeLists.txt  main.cpp  main.qml  readme.md
Model/: head_cloud.cpp  head_cloud.hpp  model_builder.cpp  model_builder.hpp  post_processing.cpp  post_processing.hpp  utility_dcm.cpp  utility_dcm.hpp
Points/: layout_10_20.cpp  layout_10_20.hpp  strech_grid.cpp  strech_grid.hpp
Viewers/: MriDataProvider.cpp  MriDataProvider.h  QVTKModelViewer.cpp  QVTKModelViewer.h  QVTKPlaneViewer.cpp  QVTKPlaneViewer.h
